--- a/config.toml
+++ b/config.toml
@@ -90,43 +90,14 @@ sms = ""
 Whatsapp = ""
 email = ""
 
-################################### English language #####################################
-[Languages.en]
-languageName = "En"
-languageCode = "en-us"
-contentDir = "content/english"
-weight = 1
-# copyright
-copyright = "Copyright ©2022 All rights reserved"
-browserviews = "This website is best viewed on IE 11+, Mozilla Firefox, Google"
+# ################################### English language #####################################
+# [Languages.en]
+# languageName = "En"
+# languageCode = "en-us"
+# contentDir = "content/english"
+# weight = 1
+# # copyright
+# copyright = "Copyright ©2022 All rights reserved"
+# browserviews = "This website is best viewed on IE 11+, Mozilla Firefox, Google"
 
-[[Languages.en.menu.main]]
-name = "Home"
-URL = "/"
-weight = 1
-
-[[Languages.en.menu.main]]
-name = "Menu"
-URL = "/menu"
-weight = 2
-
-[[Languages.en.menu.main]]
-name = "Services"
-URL = "/services"
-weight = 3
-
-[[Languages.en.menu.main]]
-name = "Blog"
-URL = "/blogs"
-weight = 4
-
-[[Languages.en.menu.main]]
-name = "About"
-URL = "/about"
-weight = 5
-
-[[Languages.en.menu.main]]
-name = "Contact"
-URL = "/contact"
-weight = 6
 
