--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: master
-media_folder: "static/images"
+media_folder: "/images"
 collections:
   - name: "Header" 
     label: "Header"
